exports[`BaseView should render its children 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1
      },
      undefined
    ]
  }>
  <Text>
    I am children.
  </Text>
</View>
`;

exports[`BaseView should support style overriding 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1
      },
      Object {
        "backgroundColor": "red"
      }
    ]
  }>
  <Text>
    I am children.
  </Text>
</View>
`;
